--- a/instuments.html
+++ b/instuments.html
@@ -20,4 +20,25 @@
   <ol type="1">
     <li><b>Acoustic Instruments</b>
       <ol>
-        <li>Classical Guitar</li
+        <li>Classical Guitar</li>
+        <li>Violin</li>
+        <li>Tabla</li>
+      </ol>
+      <ul type="disc">
+        <li>These are very smooth and soothing</li>
+        <li>Do not need electronics</li>
+        <li>Used acoustically</li>
+      </ul>
+    </li>
+
+    <li><b>Electronic Instruments</b>
+      <ul type="disc">
+        <li>Electric Guitar</li>
+        <li>Electric Keyboard</li>
+        <li>Electric Drums</li>
+      </ul>
+    </li>
+  </ol>
+
+</body>
+</html>
